src/main/gen/net/earthcomputer/chasmintellij/ChasmParser.java
// This is a generated file. Not intended for manual editing.
package net.earthcomputer.chasmintellij;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static net.earthcomputer.chasmintellij.psi.ChasmTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ChasmParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return chasmFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ADDITIVE_EXPRESSION, BITWISE_AND_EXPRESSION, BITWISE_OR_EXPRESSION, BITWISE_XOR_EXPRESSION,
      BOOLEAN_AND_EXPRESSION, BOOLEAN_OR_EXPRESSION, CALL_EXPRESSION, EQUALITY_EXPRESSION,
      EXPRESSION, INDEX_EXPRESSION, LAMBDA_EXPRESSION, LIST_EXPRESSION,
      LITERAL_EXPRESSION, MAP_EXPRESSION, MEMBER_EXPRESSION, MULTIPLICATIVE_EXPRESSION,
      PARENTHESES_EXPRESSION, REFERENCE_EXPRESSION, RELATIONAL_EXPRESSION, SHIFT_EXPRESSION,
      TERNARY_EXPRESSION, UNARY_EXPRESSION),
  };

  /* ********************************************************** */
  // SKIP? (PLUS | MINUS) SKIP? additivePrecedence
  public static boolean additiveExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, ADDITIVE_EXPRESSION, "<additive expression>");
    r = additiveExpression_0(b, l + 1);
    r = r && additiveExpression_1(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, additiveExpression_2(b, l + 1));
    r = p && additivePrecedence(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean additiveExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // PLUS | MINUS
  private static boolean additiveExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression_1")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    return r;
  }

  // SKIP?
  private static boolean additiveExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // multiplicativePrecedence additiveExpression?
  static boolean additivePrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additivePrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = multiplicativePrecedence(b, l + 1);
    r = r && additivePrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // additiveExpression?
  private static boolean additivePrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additivePrecedence_1")) return false;
    additiveExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // (callExpression | indexExpression | memberExpression)*
  static boolean argumentExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentExpression")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argumentExpression_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argumentExpression", c)) break;
    }
    return true;
  }

  // callExpression | indexExpression | memberExpression
  private static boolean argumentExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentExpression_0")) return false;
    boolean r;
    r = callExpression(b, l + 1);
    if (!r) r = indexExpression(b, l + 1);
    if (!r) r = memberExpression(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // primaryExpression argumentExpression?
  static boolean argumentPrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentPrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = primaryExpression(b, l + 1);
    r = r && argumentPrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // argumentExpression?
  private static boolean argumentPrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentPrecedence_1")) return false;
    argumentExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SKIP? BITWISE_AND SKIP? bitwiseAndPrecedence
  public static boolean bitwiseAndExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseAndExpression")) return false;
    if (!nextTokenIs(b, "<bitwise and expression>", BITWISE_AND, SKIP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, BITWISE_AND_EXPRESSION, "<bitwise and expression>");
    r = bitwiseAndExpression_0(b, l + 1);
    r = r && consumeToken(b, BITWISE_AND);
    p = r; // pin = 2
    r = r && report_error_(b, bitwiseAndExpression_2(b, l + 1));
    r = p && bitwiseAndPrecedence(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean bitwiseAndExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseAndExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean bitwiseAndExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseAndExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // equalityPrecedence bitwiseAndExpression?
  static boolean bitwiseAndPrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseAndPrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = equalityPrecedence(b, l + 1);
    r = r && bitwiseAndPrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // bitwiseAndExpression?
  private static boolean bitwiseAndPrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseAndPrecedence_1")) return false;
    bitwiseAndExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SKIP? BITWISE_OR SKIP? bitwiseOrPrecedence
  public static boolean bitwiseOrExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseOrExpression")) return false;
    if (!nextTokenIs(b, "<bitwise or expression>", BITWISE_OR, SKIP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, BITWISE_OR_EXPRESSION, "<bitwise or expression>");
    r = bitwiseOrExpression_0(b, l + 1);
    r = r && consumeToken(b, BITWISE_OR);
    p = r; // pin = 2
    r = r && report_error_(b, bitwiseOrExpression_2(b, l + 1));
    r = p && bitwiseOrPrecedence(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean bitwiseOrExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseOrExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean bitwiseOrExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseOrExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // bitwiseXorPrecedence bitwiseOrExpression?
  static boolean bitwiseOrPrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseOrPrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bitwiseXorPrecedence(b, l + 1);
    r = r && bitwiseOrPrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // bitwiseOrExpression?
  private static boolean bitwiseOrPrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseOrPrecedence_1")) return false;
    bitwiseOrExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SKIP? BITWISE_XOR SKIP? bitwiseXorPrecedence
  public static boolean bitwiseXorExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseXorExpression")) return false;
    if (!nextTokenIs(b, "<bitwise xor expression>", BITWISE_XOR, SKIP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, BITWISE_XOR_EXPRESSION, "<bitwise xor expression>");
    r = bitwiseXorExpression_0(b, l + 1);
    r = r && consumeToken(b, BITWISE_XOR);
    p = r; // pin = 2
    r = r && report_error_(b, bitwiseXorExpression_2(b, l + 1));
    r = p && bitwiseXorPrecedence(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean bitwiseXorExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseXorExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean bitwiseXorExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseXorExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // bitwiseAndPrecedence bitwiseXorExpression?
  static boolean bitwiseXorPrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseXorPrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bitwiseAndPrecedence(b, l + 1);
    r = r && bitwiseXorPrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // bitwiseXorExpression?
  private static boolean bitwiseXorPrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseXorPrecedence_1")) return false;
    bitwiseXorExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SKIP? BOOL_AND SKIP? booleanAndPrecedence
  public static boolean booleanAndExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanAndExpression")) return false;
    if (!nextTokenIs(b, "<boolean and expression>", BOOL_AND, SKIP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, BOOLEAN_AND_EXPRESSION, "<boolean and expression>");
    r = booleanAndExpression_0(b, l + 1);
    r = r && consumeToken(b, BOOL_AND);
    p = r; // pin = 2
    r = r && report_error_(b, booleanAndExpression_2(b, l + 1));
    r = p && booleanAndPrecedence(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean booleanAndExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanAndExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean booleanAndExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanAndExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // bitwiseOrPrecedence booleanAndExpression?
  static boolean booleanAndPrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanAndPrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bitwiseOrPrecedence(b, l + 1);
    r = r && booleanAndPrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // booleanAndExpression?
  private static boolean booleanAndPrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanAndPrecedence_1")) return false;
    booleanAndExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SKIP? BOOL_OR SKIP? booleanOrPrecedence
  public static boolean booleanOrExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanOrExpression")) return false;
    if (!nextTokenIs(b, "<boolean or expression>", BOOL_OR, SKIP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, BOOLEAN_OR_EXPRESSION, "<boolean or expression>");
    r = booleanOrExpression_0(b, l + 1);
    r = r && consumeToken(b, BOOL_OR);
    p = r; // pin = 2
    r = r && report_error_(b, booleanOrExpression_2(b, l + 1));
    r = p && booleanOrPrecedence(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean booleanOrExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanOrExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean booleanOrExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanOrExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // booleanAndPrecedence booleanOrExpression?
  static boolean booleanOrPrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanOrPrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = booleanAndPrecedence(b, l + 1);
    r = r && booleanOrPrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // booleanOrExpression?
  private static boolean booleanOrPrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanOrPrecedence_1")) return false;
    booleanOrExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // expression
  static boolean bracketsBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketsBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = expression(b, l + 1);
    exit_section_(b, l, m, r, false, ChasmParser::bracketsRecover);
    return r;
  }

  /* ********************************************************** */
  // !(RPAREN | RBRACE | RBRACKET)
  static boolean bracketsRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketsRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !bracketsRecover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // RPAREN | RBRACE | RBRACKET
  private static boolean bracketsRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketsRecover_0")) return false;
    boolean r;
    r = consumeToken(b, RPAREN);
    if (!r) r = consumeToken(b, RBRACE);
    if (!r) r = consumeToken(b, RBRACKET);
    return r;
  }

  /* ********************************************************** */
  // SKIP? LPAREN SKIP? bracketsBody SKIP? RPAREN
  public static boolean callExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpression")) return false;
    if (!nextTokenIs(b, "<call expression>", LPAREN, SKIP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, CALL_EXPRESSION, "<call expression>");
    r = callExpression_0(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    p = r; // pin = 2
    r = r && report_error_(b, callExpression_2(b, l + 1));
    r = p && report_error_(b, bracketsBody(b, l + 1)) && r;
    r = p && report_error_(b, callExpression_4(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean callExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean callExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean callExpression_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpression_4")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // SKIP? expression SKIP? <<eof>>
  static boolean chasmFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "chasmFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = chasmFile_0(b, l + 1);
    r = r && expression(b, l + 1);
    r = r && chasmFile_2(b, l + 1);
    r = r && eof(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SKIP?
  private static boolean chasmFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "chasmFile_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean chasmFile_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "chasmFile_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // SKIP? (EQUAL | NOT_EQUAL) SKIP? equalityPrecedence
  public static boolean equalityExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityExpression")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, EQUALITY_EXPRESSION, "<equality expression>");
    r = equalityExpression_0(b, l + 1);
    r = r && equalityExpression_1(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, equalityExpression_2(b, l + 1));
    r = p && equalityPrecedence(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean equalityExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // EQUAL | NOT_EQUAL
  private static boolean equalityExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityExpression_1")) return false;
    boolean r;
    r = consumeToken(b, EQUAL);
    if (!r) r = consumeToken(b, NOT_EQUAL);
    return r;
  }

  // SKIP?
  private static boolean equalityExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // relationalPrecedence equalityExpression?
  static boolean equalityPrecedence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityPrecedence")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = relationalPrecedence(b, l + 1);
    r = r && equalityPrecedence_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // equalityExpression?
  private static boolean equalityPrecedence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityPrecedence_1")) return false;
    equalityExpression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // lambdaExpression | ternaryPrecedence
  public static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION, "<expression>");
    r = lambdaExpression(b, l + 1);
    if (!r) r = ternaryPrecedence(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENT | (BACKTICK (ESCAPED_STRING | IDENT)* BACKTICK)
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    if (!nextTokenIs(b, "<identifier>", BACKTICK, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER, "<identifier>");
    r = consumeToken(b, IDENT);
    if (!r) r = identifier_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // BACKTICK (ESCAPED_STRING | IDENT)* BACKTICK
  private static boolean identifier_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BACKTICK);
    r = r && identifier_1_1(b, l + 1);
    r = r && consumeToken(b, BACKTICK);
    exit_section_(b, m, null, r);
    return r;
  }

  // (ESCAPED_STRING | IDENT)*
  private static boolean identifier_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!identifier_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "identifier_1_1", c)) break;
    }
    return true;
  }

  // ESCAPED_STRING | IDENT
  private static boolean identifier_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_1_1_0")) return false;
    boolean r;
    r = consumeToken(b, ESCAPED_STRING);
    if (!r) r = consumeToken(b, IDENT);
    return r;
  }

  /* ********************************************************** */
  // SKIP? LBRACKET SKIP? bracketsBody SKIP? RBRACKET
  public static boolean indexExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "indexExpression")) return false;
    if (!nextTokenIs(b, "<index expression>", LBRACKET, SKIP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, INDEX_EXPRESSION, "<index expression>");
    r = indexExpression_0(b, l + 1);
    r = r && consumeToken(b, LBRACKET);
    p = r; // pin = 2
    r = r && report_error_(b, indexExpression_2(b, l + 1));
    r = p && report_error_(b, bracketsBody(b, l + 1)) && r;
    r = p && report_error_(b, indexExpression_4(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean indexExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "indexExpression_0")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean indexExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "indexExpression_2")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean indexExpression_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "indexExpression_4")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // identifier SKIP? LAMBDA SKIP? expression
  public static boolean lambdaExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lambdaExpression")) return false;
    if (!nextTokenIs(b, "<lambda expression>", BACKTICK, IDENT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMBDA_EXPRESSION, "<lambda expression>");
    r = identifier(b, l + 1);
    r = r && lambdaExpression_1(b, l + 1);
    r = r && consumeToken(b, LAMBDA);
    p = r; // pin = 3
    r = r && report_error_(b, lambdaExpression_3(b, l + 1));
    r = p && expression(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SKIP?
  private static boolean lambdaExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lambdaExpression_1")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  // SKIP?
  private static boolean lambdaExpression_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lambdaExpression_3")) return false;
    consumeToken(b, SKIP);
    return true;
  }

  /* ********************************************************** */
  // expression
  static boolean listBracketsBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "listBracketsBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = expression(b, l + 1);
    exit_section_(b, l, m, r, false, ChasmParser::listBracketsRecover);
    return r;
  }
